deploy: pawanrajs/pawanrajs.com@549bd51ce1642c21640aa863f76824a1c1f942b4

--- a/archives.html
+++ b/archives.html
@@ -120,7 +120,7 @@ Pawanraj Sadhwani                </a>
                                 <h3>Book Review: The Time Traveler's Wife by Audrey Niffenegger</h3>
                             </a>
                         </header>
-                        <p>The Time Traveler's Wife by Audrey Niffenegger is a love story of Henry and Clare. Henry suffers from a genetic disorder that causes him to time-travel unpredictably, and his artist wife Clare suffers... well she suffers most of the consequences of this unpredictability. The plot is extremely simple per se …</p>
+                        <p>The Time Traveler's Wife by Audrey Niffenegger is the love story of Henry and Clare, complicated by Henry's propensity to time-travel unpredictably.</p>
                     </section>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
@@ -129,7 +129,7 @@ Pawanraj Sadhwani                </a>
                                 <h3>Spring Cleaning</h3>
                             </a>
                         </header>
-                        <p>In which I clean. Everything!</p>
+                        <p>In which I clean a bunch. Everything that does not spark joy must go! Everything!</p>
                     </section>
                     <section>
                         <!-- <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a> -->
