--- a/index.html
+++ b/index.html
@@ -154,11 +154,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-book"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/book-review-the-time-travelers-wife-audrey-niffenegger" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/book-review-the-time-travelers-wife-audrey-niffenegger" rel="bookmark">
                             <h3>Book Review: The Time Traveler's Wife by Audrey Niffenegger</h3>
                         </a>
                     </header>
-                    <p><a href="https://www.goodreads.com/book/show/4408</p>
+                    <p> 
+                            The Time Traveler's Wife by Audrey Niffenegger is the love story of Henry and Clare, complicated by Henry's propensity to time-travel unpredictably.
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/book-review-the-time-travelers-wife-audrey-niffenegger" class="button small">Read More</a></li>
@@ -171,11 +173,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-broom"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/spring-cleaning" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/spring-cleaning" rel="bookmark">
                             <h3>Spring Cleaning</h3>
                         </a>
                     </header>
-                    <p>"It's been a while..." "Too many of our conversations begin that way." "I am aware." "So, what have you been up to?" "Oh, this and that." "That's... forthcomi</p>
+                    <p> 
+                            In which I clean a bunch. Everything that does not spark joy must go! Everything!
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/spring-cleaning" class="button small">Read More</a></li>
@@ -188,11 +192,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-cloud"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/cloud-application-security-best-practices" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/cloud-application-security-best-practices" rel="bookmark">
                             <h3>Cloud Application Security Best Practices</h3>
                         </a>
                     </header>
-                    <p>Organizations increasingly turn to cloud to exploit the benefits of elasticity, deployment velocity and scale for today’s fast-paces business environment. However, securing these environments r</p>
+                    <p> 
+                            Organizations increasingly turn to cloud to exploit the benefits of elasticity, deployment velocity and scale for today’s fast-paces business environment. However, securing these environments remains a challenge with 75% of IT professionals citing it as their top concern that restricts their organization’s migration to public cloud. Traditional security …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/cloud-application-security-best-practices" class="button small">Read More</a></li>
