--- a/index2.html
+++ b/index2.html
@@ -154,11 +154,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-code"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/static-site-pelican-what-is-going-on" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/static-site-pelican-what-is-going-on" rel="bookmark">
                             <h3>Building My Static Site with Pelican</h3>
                         </a>
                     </header>
-                    <p>What are we even talking about? In a traditional setup, a request recieved by the web-server (like NGINX) is forwarded to the Content Management System (CMS, like Wordpress). The CMS u</p>
+                    <p> 
+                            What are we even talking about? In a traditional setup, a request recieved by the web-server (like NGINX) is forwarded to the Content Management System (CMS, like Wordpress). The CMS uses a number of templates, and data from a site database to build an HTML page specific to the request …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/static-site-pelican-what-is-going-on" class="button small">Read More</a></li>
@@ -171,11 +173,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-comments"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/happy-new-year" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/happy-new-year" rel="bookmark">
                             <h3>Happy New Year?</h3>
                         </a>
                     </header>
-                    <p>"Happy New Year!" "It's been a while." "You're supposed to say Happy New Year to you too. But yes." "Happy New Year. But also, what kept you busy?" "Well, you alrea</p>
+                    <p> 
+                            New year, new me!
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/happy-new-year" class="button small">Read More</a></li>
@@ -188,11 +192,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-comments"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/oooh-shiny" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/oooh-shiny" rel="bookmark">
                             <h3>Oooh Shiny!</h3>
                         </a>
                     </header>
-                    <p>"Hello again." "Hello to you, too!" "What's on your mind today?" "On my mind? Nothing. That's kinda the weird thing - I think I am losing my ability to think." "You</p>
+                    <p> 
+                            I think we might be on to something here. But first, I must play the next move on my chess game, but before that let me finish the bo- oooh shiny!
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/oooh-shiny" class="button small">Read More</a></li>
