--- a/index3.html
+++ b/index3.html
@@ -154,11 +154,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-comments"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/so-it-begins" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/so-it-begins" rel="bookmark">
                             <h3>So it begins...</h3>
                         </a>
                     </header>
-                    <p>"So..." "So." "You started this on 16th December. It is now 21st December..." "Yes, and?" "Nothing. Just pointing it out." "Yes, thanks. I am aware that I've</p>
+                    <p> 
+                            I think I am slowly going crazy!
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/so-it-begins" class="button small">Read More</a></li>
@@ -171,11 +173,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-frown"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/not-today" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/not-today" rel="bookmark">
                             <h3>Not Today</h3>
                         </a>
                     </header>
-                    <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly -</p>
+                    <p> 
+                            Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly - but find only vague incoherent static. The tuning mechanism of your life-radio is broken …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/not-today" class="button small">Read More</a></li>
@@ -188,11 +192,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-smile"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/growing-up" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/growing-up" rel="bookmark">
                             <h3>Growing up.</h3>
                         </a>
                     </header>
-                    <p>It's been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so th</p>
+                    <p> 
+                            It's been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so that was nice. We visited a few places, so that was nice …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/growing-up" class="button small">Read More</a></li>
