--- a/index4.html
+++ b/index4.html
@@ -154,11 +154,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-smile"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/we-all-need-the-eggs" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/we-all-need-the-eggs" rel="bookmark">
                             <h3>We all Need the Eggs...</h3>
                         </a>
                     </header>
-                    <p>My parents have been here for the last couple of weeks. It's nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging.</p>
+                    <p> 
+                            My parents have been here for the last couple of weeks. It's nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging. The house feels like a home... There's an interesting Woody Allen …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/we-all-need-the-eggs" class="button small">Read More</a></li>
@@ -171,11 +173,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-thumbs-up"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/the-facebook-experiment" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/the-facebook-experiment" rel="bookmark">
                             <h3>The Facebook Experiment</h3>
                         </a>
                     </header>
-                    <p>An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of</p>
+                    <p> 
+                            An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of the timeline affects the mood of the user. Evidently it does. Predictably, the pitchforks have come out at the supposed …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/the-facebook-experiment" class="button small">Read More</a></li>
@@ -188,11 +192,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-thumbs-up"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/to-like-or-not-to-like" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/to-like-or-not-to-like" rel="bookmark">
                             <h3>To Like or Not to Like...</h3>
                         </a>
                     </header>
-                    <p>I've been getting back on to social media after a fairly long hiatus. And most social media services have changed a little bit in that time. What hasn't changed however, is how stuff g</p>
+                    <p> 
+                            I've been getting back on to social media after a fairly long hiatus. And most social media services have changed a little bit in that time. What hasn't changed however, is how stuff get's shared around these places. Google has +1, Tumblr has "reblogging", Twitter has "retweet" and Facebook has …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/to-like-or-not-to-like" class="button small">Read More</a></li>
