--- a/index5.html
+++ b/index5.html
@@ -154,11 +154,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-book"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/the-power-of-stories" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/the-power-of-stories" rel="bookmark">
                             <h3>The Power of Stories...</h3>
                         </a>
                     </header>
-                    <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious</p>
+                    <p> 
+                            I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious stuff". What it does is recount the stories in the Bible in short 10-12 page chapters. And as I read, I realize that as a story, the Bible is quite …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/the-power-of-stories" class="button small">Read More</a></li>
@@ -171,11 +173,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-pencil-alt"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" rel="bookmark">
                             <h3>I Want to Talk to You...</h3>
                         </a>
                     </header>
-                    <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words</p>
+                    <p> 
+                            I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words - of thoughts - of understanding, flowing down into the valley that now …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/i-want-to-talk-to-you" class="button small">Read More</a></li>
@@ -188,11 +192,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-book"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/book-review-the-source-james-michener" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/book-review-the-source-james-michener" rel="bookmark">
                             <h3>Book Review: The Source by James A. Michener</h3>
                         </a>
                     </header>
-                    <p><a href="http://www.goodreads.com/book/s</p>
+                    <p> 
+                            The Source by James A. Michener Uses the background of an archaeological dig, to chronicle the rise of religion (specifically Judaism) from prehistory (30000 yrs ago), to the modern state of Israel (till 1960s, when the book was written). Defines the relationship of Judaism, with other derivative religions - Christianity and …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/book-review-the-source-james-michener" class="button small">Read More</a></li>
