--- a/index6.html
+++ b/index6.html
@@ -154,11 +154,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-pencil-alt"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/nuclear-power" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/nuclear-power" rel="bookmark">
                             <h3>Nuclear Power</h3>
                         </a>
                     </header>
-                    <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fi</p>
+                    <p> 
+                            In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fission... Then things became really interesting... That was the advent of nuclear energy... Now there was a set of people who thought nuclear …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/nuclear-power" class="button small">Read More</a></li>
@@ -171,11 +173,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-arrows-alt-h"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/this-way-and-that" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/this-way-and-that" rel="bookmark">
                             <h3>This way and That...</h3>
                         </a>
                     </header>
-                    <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the d</p>
+                    <p> 
+                            So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direction you're walking in. And then you see a vehicle coming at you …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/this-way-and-that" class="button small">Read More</a></li>
@@ -188,11 +192,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-book"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/book-review-king-queen-knave-nabokov" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/book-review-king-queen-knave-nabokov" rel="bookmark">
                             <h3>Book Review: King, Queen, Knave by Vladimir Nabokov</h3>
                         </a>
                     </header>
-                    <p>King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (</p>
+                    <p> 
+                            King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (Korol', dama, valet), and later translated (and modified quite some bit) in English by Nabokov himself, with help from his son. The story is a love-triangle set in Berlin. Franz, a village bumpkin, goes to Berlin to …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/book-review-king-queen-knave-nabokov" class="button small">Read More</a></li>
