--- a/index7.html
+++ b/index7.html
@@ -154,11 +154,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-pencil-alt"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/reasonable" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/reasonable" rel="bookmark">
                             <h3>Reasonable...</h3>
                         </a>
                     </header>
-                    <p>His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had</p>
+                    <p> 
+                            His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had a long way to go - many responsibilities to fulfil. Keeping fit was the reasonable thing to …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/reasonable" class="button small">Read More</a></li>
@@ -171,11 +173,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-heart"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/love-because" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/love-because" rel="bookmark">
                             <h3>Because</h3>
                         </a>
                     </header>
-                    <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on</p>
+                    <p> 
+                            "I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on the tip of his tongue. "Why?" He thought. There was nothing to suggest he was …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/love-because" class="button small">Read More</a></li>
@@ -188,11 +192,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-pencil-alt"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/being-ok" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/being-ok" rel="bookmark">
                             <h3>Being OK</h3>
                         </a>
                     </header>
-                    <p>He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even</p>
+                    <p> 
+                            He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even happy. And then he met her. He wasn't much for talking. Putting himself out there was …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/being-ok" class="button small">Read More</a></li>
