--- a/index8.html
+++ b/index8.html
@@ -154,11 +154,13 @@ Pawanraj Sadhwani                </a>
                 <section>
                     <span class="icon solid featured fa-smile"></span>
                     <header>
-                        <a href="https://pawanrajs.com/posts/jump" rel='bookmark'>
+                        <a href="https://pawanrajs.com/posts/jump" rel="bookmark">
                             <h3>Jump!</h3>
                         </a>
                     </header>
-                    <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea</p>
+                    <p> 
+                            Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea of a trip to Mandvi beach was therefore exciting (as all trips to …
+                    </p>
                     <footer>
                         <ul class="buttons">
                             <li><a href="https://pawanrajs.com/posts/jump" class="button small">Read More</a></li>
